plugins {
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'

configurations {
    all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://repo.spring.io/release"
    }
    maven {
        url "https://maven.kurento.org/release"
    }
    maven {
        url "https://repo.maven.apache.org/maven2/"
    }
}

ext {
    kurentoVersion = '6.18.0'
    lombokVersion = '1.18.30'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation "org.kurento:kurento-client:${kurentoVersion}"
    implementation "org.kurento:kurento-utils-js:${kurentoVersion}"
    implementation 'com.google.code.gson:gson:2.10.1'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--enable-preview']
}

bootJar {
    archiveFileName = 'webrtc-app.jar'
}